--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input id="input1" value="asdfg">
+    <!-- <input id="input1" value="asdfg">
     <input id="input" value="">
     <input id="input" value="">
     <input id="input" value="">
@@ -28,7 +28,46 @@
         <li>2</li>
         <li>1</li>
         <li>1</li>
+    </ul> -->
+
+    <!-- 264 -->
+
+    <!-- #1 -->
+
+    <!-- <div class="div">asdasa</div>
+    <button>Увеличить</button> -->
+
+    <!-- #2 -->
+    <!-- <div class="div">adasasd</div>
+    <button>sadsadsad</button> -->
+
+    <!-- #3 -->
+
+    <!-- <ul>
+        <li>asd</li>
+        <li>asdasas</li>
     </ul>
+    <button>sadsadsad</button> -->
+
+    <!-- 265 -->
+
+    <!-- #2 -->
+
+    <!-- <p>sadasasasdasa</p>
+    <button id="fat">fat</button>
+    <button id="crossOut">perech</button>
+    <button id="red">RED</button> -->
+
+    <!-- #3 -->
+
+    <!-- <p>sadasasasdasa</p>
+    <button id="fat">fat</button>
+    <button id="crossOut">perech</button>
+    <button id="red">RED</button> -->
+
+    <button id="button">click me</button>
+    <div id="elem"></div>
+
     <script src="Введение в DOM.js"></script>
 </body>
 </html>
