--- a/index.html
+++ b/index.html
@@ -161,7 +161,133 @@
 
     <!-- <div id="elem">txt<b>tag</b>txt<b>tag</b></div>    -->
 
+    <!-- №271 -->
+
+    <!-- <ul>
+        <li>2000</li>
+        <li>2004</li>
+        <li>2021</li>
+        <li>2022</li>
+        <li>2025</li>
+        <li>2031</li>
+    </ul>    -->
+
+    <!-- #272 -->
+
+    <!-- #1,2 -->
+
+    <!-- <div class="p1">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+    </div>
     
+    <div class="p2">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+    </div> -->
+
+    <!-- #3 -->
+
+    <!-- <p>text</p>
+    <button>click</button> -->
+
+    <!-- №4 -->
+
+    <!-- <p>1</p>
+    <p>2</p>
+    <p>3</p>
+
+    <button>click</button> -->
+
+    <!-- #5 -->
+
+    <!-- <p>1</p>
+    <p>2</p>
+    <p>3</p> -->
+
+    <!-- #6 -->
+
+    <!-- <p>text1</p>
+    <p>text2</p>
+    <p>text3</p>
+    <button>click</button> -->
+
+    <!-- #7 -->
+
+    <!-- <p>1</p>
+    <p>2</p>
+    <p>3</p>
+
+    <button>click</button> -->
+
+    <!-- #8 -->
+
+    <!-- <input>
+    <input>
+    <input>
+
+    <button>click</button> -->
+
+    <!-- #9 -->
+
+    <!-- <input id="inp1">
+    <input id="inp2">
+    <input id="inp3">
+
+    <button id="btn">click</button> -->
+
+    <!-- #10 -->
+
+    <!-- <input id="inp1">
+    <input id="inp2">
+    <p id="res"></p>
+
+    <button id="btn">click</button> -->
+
+    <!-- #11 -->
+
+    <!-- <input data-text="text1">
+    <input data-text="text2">
+    <input data-text="text3">
+
+    <button id="btn">click</button>  -->
+
+    <!-- #12 -->
+
+    <!-- <input>
+    <input>
+    <input>
+
+    <button id="btn">click</button> -->
+
+    <!-- #13 -->
+
+    <!-- <input>
+    <input>
+    <input>
+
+    <button id="btn">click</button> -->
+
+    <!-- #14 -->
+<!-- 
+    <input id="inp1">
+    <input id="inp2">
+    <input id="inp3">
+
+    <button id="btn">click</button> -->
+
+    <!-- #15 -->
+
+    <!-- <input id="inp"> -->
+
+    <!-- #273 Практикум -->
+
+    <input>
+
+    <p>ASDASD</p>
+
     <script src="Введение в DOM.js"></script>
 </body>
 </html>
