--- a/index.html
+++ b/index.html
@@ -284,9 +284,50 @@
 
     <!-- #273 Практикум -->
 
+    <!-- #1 -->
+
+    <!-- <input>
+
+    <p>ASDASD</p> -->
+
+    <!-- #2 -->
+
+    <!-- <input>
+    <input>
     <input>
 
-    <p>ASDASD</p>
+    <p>DAAS</p>
+    <button>click</button> -->
+
+    <!-- #3 -->
+
+    <!-- <input> -->
+
+    <!-- #4 -->
+
+    <!-- <input> -->
+
+    <!-- #5 -->
+
+    <!-- <input>
+    <input>
+    <input>
+    <input> -->
+
+    <!-- #6 -->
+
+    <!-- <input> -->
+
+    <!-- #7 -->
+
+    <!-- <input> -->
+
+    <!-- #8 -->
+
+    <!-- #9 -->
+
+    <input>
+    <button>check</button>
 
     <script src="Введение в DOM.js"></script>
 </body>
