--- a/index.html
+++ b/index.html
@@ -326,8 +326,26 @@
 
     <!-- #9 -->
 
-    <input>
-    <button>check</button>
+    <!-- <input>
+    <button>check</button> -->
+
+    <!-- #10 -->
+
+    <!-- <input> -->
+
+    <!-- #11 -->
+
+    <!-- <p></p>
+    <p></p>
+    <p></p>
+    <button>asdasda</button> -->
+
+    <!-- #12 -->
+
+    <a href="first">asd</a>
+    <a href="second">dsa</a>
+    <a href="third">sad</a>
+    <button>Click</button>
 
     <script src="Введение в DOM.js"></script>
 </body>
