--- a/index.html
+++ b/index.html
@@ -342,10 +342,57 @@
 
     <!-- #12 -->
 
-    <a href="first">asd</a>
+    <!-- <a href="first">asd</a>
     <a href="second">dsa</a>
     <a href="third">sad</a>
-    <button>Click</button>
+    <button>Click</button> -->
+
+    <!-- #13 -->
+
+    <!-- <a href="">Das</a>
+    <a href="">Gaad</a>
+    <a href="">SAd</a>
+    <button>Click</button> -->
+
+    <!-- #14 -->
+
+    <!-- <p>2</p>
+    <p>3</p>
+    <p>4</p> -->
+
+    <!-- #15 -->
+
+    <!-- <input> -->
+
+    <!-- #16 -->
+
+    <!-- <input>
+    <button id="plus">+1</button>
+    <button id="minus">-1</button> -->
+
+    <!-- #17 -->
+
+    <!-- <input>
+    <p>dasd</p>
+    <p>asd</p>
+    <p>das</p> -->
+
+    <!-- #18 -->
+
+    <!-- <div>ASddasjdjh dasdassa fafsafa ghjgh</div>
+    <div>zxczxczxc xcvx cxc vbnb bnm nmmmn</div>
+    <div>qweqweqw werwerwe erterter rtyrty</div>
+
+    <p>Text: </p> -->
+
+    <!-- #19 -->
+
+    <!-- <input> -->
+
+    <!-- #20 -->
+
+    <input>
+    <button></button>
 
     <script src="Введение в DOM.js"></script>
 </body>
