--- a/index.html
+++ b/index.html
@@ -391,8 +391,33 @@
 
     <!-- #20 -->
 
-    <input>
-    <button></button>
+    <!-- <input>
+    <button>Get random word</button> -->
+
+    <!-- #21 -->
+
+    <!-- <input type="text">
+    <button>Click</button> -->
+
+    <!-- #22 -->
+
+    <!-- <input>
+    <button>Click</button>
+    <p></p> -->
+
+    <!-- #23 -->
+
+    <!-- <input>
+    <button>Click</button>
+    <p></p> -->
+
+    <!-- №24 -->
+
+    <input id="a" type="number">
+    <input id="b" type="number">
+    <input id="c" type="number">
+    <button>Click</button>
+    <p></p>
 
     <script src="Введение в DOM.js"></script>
 </body>
