--- a/index.html
+++ b/index.html
@@ -413,12 +413,69 @@
 
     <!-- №24 -->
 
-    <input id="a" type="number">
+    <!-- <input id="a" type="number">
     <input id="b" type="number">
     <input id="c" type="number">
     <button>Click</button>
-    <p></p>
+    <p></p> -->
 
-    <script src="Введение в DOM.js"></script>
+    <!-- Forms #274 -->
+
+    <!-- #1 -->
+
+    <!-- <textarea>text</textarea>
+    <p></p> -->
+
+    <!-- #275 -->
+
+    <!-- #1 -->
+
+    <!-- <input disabled>
+    <button>Click</button> -->
+
+    <!-- #2 -->
+
+    <!-- <input>
+    <button id="btn1">Open</button>
+    <button id="btn2">Lock</button> -->
+
+    <!-- #3 -->
+
+    <!-- <input>
+    <button>Click</button> -->
+
+    <!-- #276 -->
+
+    <!-- #1 -->
+
+    <!-- <input type="checkbox">
+    <button id="btn1">Click</button>
+    <button id="btn2">Click2</button> -->
+
+    <!-- #2 -->
+    <!-- <input type="checkbox" checked>
+    <button id="btn1">Click</button>
+    <p></p> -->
+
+    <!-- #277 -->
+
+    <!-- #1 -->
+
+    <!-- <input type="checkbox">
+    <button>clcik</button>    -->
+
+    <!-- #278 -->
+
+    <!-- #1 -->
+
+    <input type="radio" name="elem" 
+	value="1" checked> 
+    <input type="radio" name="elem" value="2">
+    <input type="radio" name="elem" value="3">
+
+    <input type="submit" id="button">
+
+    <!-- <script src="Введение в DOM.js"></script> -->
+    <script src="Forms.js"></script>
 </body>
 </html>
