--- a/index.html
+++ b/index.html
@@ -468,12 +468,51 @@
 
     <!-- #1 -->
 
-    <input type="radio" name="elem" 
+    <!-- <input type="radio" name="elem" 
 	value="1" checked> 
     <input type="radio" name="elem" value="2">
     <input type="radio" name="elem" value="3">
 
-    <input type="submit" id="button">
+    <input type="submit" id="button"> -->
+
+    <!-- #279 -->
+
+    <!-- #1 -->
+
+    <!-- <input id="elem" value="text">
+    <p></p> -->
+
+    <!-- #2 -->
+
+    <!-- <input type="checkbox"> -->
+
+    <!-- #3 -->
+
+    <!-- <input type="text"> -->
+
+    <!-- #280 -->
+
+    <!-- #1 -->
+
+    <!-- <input type="text" name="" id=""> -->
+
+    <!-- <input type="text" name="" id=""> -->
+    <!-- <p></p> -->
+
+    <!-- #281 -->
+
+    <!-- #1 -->
+
+    <!-- <input type="text" name="" id="inp1">
+    <input type="text" name="" id="inp2"> -->
+
+    <!-- #282 -->
+
+    <!-- #1 -->
+
+    
+
+
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <script src="Forms.js"></script>
