--- a/index.html
+++ b/index.html
@@ -572,8 +572,105 @@
 
     <!-- #1 -->
 
-    
+    <!-- <input type="text">
 
+    <select name="" id="">
+        
+        <option value="0" selected>янв</option>
+        <option value="1">фев</option>
+        <option value="2">мар</option>
+        <option value="3">апр</option>
+        <option value="4">май</option>
+        <option value="5">июнь</option>
+        <option value="6">июль</option>
+        <option value="7">авг</option>
+        <option value="8">сен</option>
+        <option value="9">окт</option>
+        <option value="10">нояб</option>
+        <option value="11">дек</option>
+    </select> -->
+
+    <!-- #2 -->
+
+    <!-- <select name="" id="">
+        <option value="1">Воскресенье</option>
+        <option value="2">Понедельник</option>
+        <option value="3">Вторник</option>
+        <option value="4">Среда</option>
+        <option value="5">Четверг</option>
+        <option value="6">Пятница</option>
+        <option value="7">Суббота</option>
+    </select> -->
+
+    <!-- #285 -->
+
+    <!-- #1 -->
+
+    <!-- <select name="" id="">
+        <option value="1">Воскресенье</option>
+        <option value="2">Понедельник</option>
+        <option value="3">Вторник</option>
+        <option value="4">Среда</option>
+        <option value="5">Четверг</option>
+        <option value="6">Пятница</option>
+        <option value="7">Суббота</option>
+    </select> -->
+
+    <!-- #286 -->
+
+    <!-- #1 -->
+
+    <!-- <select name="" id="">
+        <option value="1">Воскресенье</option>
+        <option value="2">Понедельник</option>
+        <option value="3">Вторник</option>
+        <option value="4">Среда</option>
+        <option value="5">Четверг</option>
+        <option value="6">Пятница</option>
+        <option value="7">Суббота</option>
+    </select> -->
+
+    <!-- #2 -->
+
+    <!-- <select name="" id="">
+        <option value="1">Воскресенье</option>
+        <option value="2">Понедельник</option>
+        <option value="3">Вторник</option>
+        <option value="4">Среда</option>
+        <option value="5">Четверг</option>
+        <option value="6">Пятница</option>
+        <option value="7">Суббота</option>
+    </select> -->
+
+    <!-- <button onclick="btnad()">asddsasds</button> -->
+
+    <!-- #3 -->
+
+    <!-- <select name="" id="">
+        <option value="1">Воскресенье</option>
+        <option value="2">Понедельник</option>
+        <option value="3">Вторник</option>
+        <option value="4">Среда</option>
+        <option value="5">Четверг</option>
+        <option value="6">Пятница</option>
+        <option value="7">Суббота</option>
+    </select>
+
+    <button onclick="btnad()">asddsasds</button> -->
+
+    <!-- #4 -->
+
+    <select name="" id="">
+        <option value="1">Воскресенье</option>
+        <option value="2">Понедельник</option>
+        <option value="3">Вторник</option>
+        <option value="4">Среда</option>
+        <option value="5">Четверг</option>
+        <option value="6">Пятница</option>
+        <option value="7">Суббота</option>
+    </select>
+
+    <button onclick="btnad()">asddsasds</button>
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <script src="Forms.js"></script>
