--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
 
     <!-- #4 -->
 
-    <select name="" id="">
+    <!-- <select name="" id="">
         <option value="1">Воскресенье</option>
         <option value="2">Понедельник</option>
         <option value="3">Вторник</option>
@@ -670,9 +670,32 @@
         <option value="7">Суббота</option>
     </select>
 
-    <button onclick="btnad()">asddsasds</button>
+    <button onclick="btnad()">asddsasds</button> -->
+
+    <!-- #287 -->
+
+    <!-- #1 -->
+
+    <!-- <textarea></textarea>
+    <div></div>  -->
+
+    <!-- #2 -->
+
+    <!-- <input type="checkbox">
+    <div>asd</div>
+    <button>button</button> -->
+
+    <!-- #3 -->
+
+    <!-- <input type="checkbox">
+    <button>button</button> -->
+
+    <!-- #288 -->
+
+    
 
     <!-- <script src="Введение в DOM.js"></script> -->
-    <script src="Forms.js"></script>
+    <!-- <script src="Forms.js"></script> -->
+    <script src="Event.js"></script>
 </body>
 </html>
