--- a/index.html
+++ b/index.html
@@ -692,7 +692,69 @@
 
     <!-- #288 -->
 
-    
+    <!-- #1 -->
+
+    <!-- <button id="elem">text</button>  -->
+
+    <!-- #289 -->
+
+    <!-- #1 -->
+
+    <!-- <div class="elem">0 : 0</div> -->
+
+    <!-- #290 -->
+
+    <!-- #1 -->
+
+    <!-- <button id="elem">text</button> -->
+
+    <!-- #291 -->
+
+    <!-- #1 -->
+
+    <!-- <ul id="elem">
+        <li>text</li>
+        <li>text</li>
+        <li>text</li>
+        <li>text</li>
+        <li>text</li>
+    </ul> -->
+
+    <!-- #292 -->
+
+    <!-- #1,5 -->
+
+    <!-- <input type="text">
+    <p></p> -->
+
+    <!-- #293 -->
+
+    <!-- #1 -->
+
+    <!-- <button>ASDASD</button> -->
+
+    <!-- #2 -->
+
+    <!-- <ul id="elem">
+        <li>text</li>
+        <li>text</li>
+        <li>text</li>
+        <li>text</li>
+        <li>text</li>
+    </ul> -->
+
+    <!-- #294 -->
+
+    <!-- #1 -->
+
+    <!-- <a href="/" id="elem">ссылка</a> -->
+
+    <!-- #2 -->
+
+    <input type="text" id="inp1">
+    <input type="text" id="inp2">
+    <p></p>
+    <a href="/">ссылка</a>
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
