--- a/index.html
+++ b/index.html
@@ -751,10 +751,24 @@
 
     <!-- #2 -->
 
-    <input type="text" id="inp1">
+    <!-- <input type="text" id="inp1">
     <input type="text" id="inp2">
     <p></p>
-    <a href="/">ссылка</a>
+    <a href="/">ссылка</a> -->
+
+    <!-- #300 -->
+
+    <!-- #1 -->
+
+    <ul>
+        <li>item <i>italic</i> item</li>
+        <li>item <i>italic</i> item</li>
+        <li>item <i>italic</i> item</li>
+        <li>item <i>italic</i> item</li>
+        <li>item <i>italic</i> item</li>
+    </ul>
+    
+    <button>add</button>
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
