--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
 
     <!-- #1 -->
 
-    <ul>
+    <!-- <ul>
         <li>item <i>italic</i> item</li>
         <li>item <i>italic</i> item</li>
         <li>item <i>italic</i> item</li>
@@ -768,10 +768,23 @@
         <li>item <i>italic</i> item</li>
     </ul>
     
-    <button>add</button>
+    <button>add</button> -->
+
+    <!-- #303 -->
+
+    <!-- #1 -->
+
+    <!-- <input id="elem" value="text"> -->
+
+    <!-- #304 -->
+
+    <!-- #1 -->
+
+    <input id="elem" value="3">
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
-    <script src="Event.js"></script>
+    <!-- <script src="Event.js"></script> -->
+    <script src="Context.js"></script>
 </body>
 </html>
