--- a/index.html
+++ b/index.html
@@ -780,11 +780,38 @@
 
     <!-- #1 -->
 
-    <input id="elem" value="3">
+    <!-- <input id="elem" value="3"> -->
+
+    <!-- #305 -->
+
+    <!-- #1 -->
+
+    <!-- <input id="elem1" value="text1">
+    <input id="elem2" value="text2">
+    <input id="elem3" value="text3"> -->
+
+    <!-- #2 -->
+
+    <!-- <input id="elem" value="hello"> -->
+
+    <!-- #306 -->
+
+    <!-- #1 -->
+
+    <!-- <input id="elem" value="hello"> -->
+
+    <!-- #307 -->
+
+    <!-- #1 -->
+
+    <!-- <input id="elem" value="привет">  -->
+
+    <!-- #Timers -->
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
     <!-- <script src="Event.js"></script> -->
-    <script src="Context.js"></script>
+    <!-- <script src="Context.js"></script> -->
+    <script src="Timers.js"></script>
 </body>
 </html>
