--- a/index.html
+++ b/index.html
@@ -808,6 +808,51 @@
 
     <!-- #Timers -->
 
+    <!-- #311 -->
+
+    <!-- #1 -->
+
+    <!-- <button id="start">start</button> -->
+
+    <!-- #312 -->
+
+    <!-- #1 -->
+
+    <!-- <button id="start">start</button>
+    <button id="stop">stop</button>  -->
+
+    <!-- #2 -->
+
+    <!-- <input type="submit" id="start" value="start">
+    <input type="submit" id="stop"  value="stop">    -->
+
+    <!-- #3 -->
+
+    <!-- <input type="submit" id="start" value="start">
+    <input type="submit" id="stop"  value="stop"> -->
+
+    <!-- #4 -->
+
+    <!-- <input type="submit" id="start" value="start">
+    <input type="submit" id="stop"  value="stop"> -->
+
+    <!-- #5 -->
+
+    <!-- <input type="submit" id="start" value="start">
+    <input type="submit" id="stop"  value="stop"> -->
+
+    <!-- #313 -->
+
+    <!-- #2 -->
+
+    <!-- <input type="text" value="10"> -->
+
+    <!-- #314 -->
+
+    <!-- #1 -->
+
+    <input type="button" id="elem" value="1">
+
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
     <!-- <script src="Event.js"></script> -->
