--- a/index.html
+++ b/index.html
@@ -851,7 +851,13 @@
 
     <!-- #1 -->
 
-    <input type="button" id="elem" value="1">
+    <!-- <input type="button" id="elem" value="1"> -->
+
+    <!-- #315 -->
+
+    <!-- #1 -->
+
+    <input type="button" id="elem" value="10">
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
