--- a/index.html
+++ b/index.html
@@ -857,12 +857,48 @@
 
     <!-- #1 -->
 
-    <input type="button" id="elem" value="10">
+    <!-- <input type="button" id="elem" value="10"> -->
+
+    <!-- №316 -->
+
+    <!-- №8 -->
+
+    <!-- <p></p> -->
+
+    <!-- #317 -->
+
+    <!-- #1 -->
+
+    <!-- <p></p> -->
+
+
+    <!-- Манипулирование элементами -->
+
+
+    <!-- #318 -->
+
+    <!-- #1 -->
+
+    <!-- <ol id="elem"></ol>
+    <button id="button">click me</button> -->
+
+    <!-- #2 -->
+
+    <!-- <ol id="elem"></ol>
+    <button id="button">click me</button> -->
+
+    <!-- #319 -->
+
+    <!-- #1 -->
+
+    <ol id="elem"></ol>
+    <button id="button">click me</button>
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
     <!-- <script src="Event.js"></script> -->
     <!-- <script src="Context.js"></script> -->
-    <script src="Timers.js"></script>
+    <!-- <script src="Timers.js"></script> -->
+    <script src="Element Manipulation.js"></script>
 </body>
 </html>
