--- a/index.html
+++ b/index.html
@@ -891,8 +891,63 @@
 
     <!-- #1 -->
 
-    <ol id="elem"></ol>
-    <button id="button">click me</button>
+    <!-- <ol id="elem"></ol>
+    <button id="button">click me</button> -->
+
+    <!-- #320 -->
+
+    <!-- #1 -->
+
+    <!-- <ul>asdasd</ul> -->
+
+    <!-- #321 -->
+
+    <!-- #1 -->
+
+    <!-- <div></div>
+    <p></p> -->
+
+    <!-- #322 -->
+
+    <!-- #1 -->
+
+    <!-- <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul> -->
+
+    <!-- #2 -->
+
+    <!-- <ul id="parent">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
+    
+    <input type="submit" id="button"> -->
+
+    <!-- #323 -->
+
+    <!-- #1 -->
+
+    <!-- <ul id="elem">
+        <li>text</li>
+        <li>text</li>
+        <li>text</li>
+        <li>text</li>
+        <li>text</li>
+    </ul> -->
+
+    <!-- #2 -->
+
+    <ul id="parent">
+        <li>text</li>
+        <li>text</li>
+        <li id="elem">text</li>
+        <li>text</li>
+        <li>text</li>
+    </ul>
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
