--- a/index.html
+++ b/index.html
@@ -941,13 +941,23 @@
 
     <!-- #2 -->
 
-    <ul id="parent">
+    <!-- <ul id="parent">
         <li>text</li>
         <li>text</li>
         <li id="elem">text</li>
         <li>text</li>
         <li>text</li>
-    </ul>
+    </ul> -->
+
+    <!-- #324 -->
+
+    <!-- #1 - 5 -->
+
+    <div id="elem" style="border: 1px solid red;">
+        <p>text</p>
+        <p>text</p>
+        <p>text</p>
+    </div>
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
