--- a/index.html
+++ b/index.html
@@ -953,11 +953,75 @@
 
     <!-- #1 - 5 -->
 
-    <div id="elem" style="border: 1px solid red;">
+    <!-- <div id="elem" style="border: 1px solid red;">
         <p>text</p>
         <p>text</p>
         <p>text</p>
-    </div>
+    </div> -->
+
+    <!-- №325 -->
+
+    <!-- №1 -->
+
+    <!-- <input type="text">
+    <button></button> -->
+
+    <!-- #326 -->
+
+    <!-- #1,2 -->
+
+    <!-- <div id="elem" class="www"></div> -->
+
+    <!-- #3 -->
+
+    <!-- <div id="elem1">
+        <p id="elem2"></p>
+    </div> -->
+
+    <!-- ПРАКТИКА -->
+
+    <!-- #327 -->
+
+    <!-- #1 -->
+
+    <!-- <div id="parent"></div> -->
+
+    <!-- #328 -->
+
+    <!-- #1-4 -->
+
+    <!-- <ul id="elem"></ul> -->
+
+    <!-- #329 -->
+
+    <!-- №1-3 -->
+
+    <!-- <table id="table"></table> -->
+
+    <!-- #4 -->
+
+    <!-- <table id="table"></table>
+    <input type="text" name="" id="rows">
+    <input type="text" name="" id="columns">
+    <button>Generate</button> -->
+
+    <!-- #330 -->
+
+    <!-- #1 -->
+
+    <!-- <table id="table"></table> -->
+
+    <!-- #331 -->
+
+    <!-- #1 -->
+
+    <!-- <table id="table"></table> -->
+
+    <!-- #332 -->
+
+    <!-- #1 -->
+
+    <table id="table"></table>
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
