--- a/index.html
+++ b/index.html
@@ -1021,13 +1021,35 @@
 
     <!-- #1 -->
 
-    <table id="table"></table>
+    <!-- <table id="table"></table> -->
+
+    <!-- #333 -->
+
+    <!-- #1 -->
+
+    <!-- <table id="table"></table>
+    <button>Click</button> -->
+
+    <!-- #2 -->
+
+    <table id="table">
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <button>Click</button>
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
     <!-- <script src="Event.js"></script> -->
     <!-- <script src="Context.js"></script> -->
     <!-- <script src="Timers.js"></script> -->
-    <script src="Element Manipulation.js"></script>
+    <script src="Practice.js"></script>
+    <!-- <script src="Element Manipulation.js"></script> -->
 </body>
 </html>
