--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
 
     <!-- #2 -->
 
-    <table id="table">
+    <!-- <table id="table">
         <tr>
             <td></td>
             <td></td>
@@ -1042,7 +1042,52 @@
             <td></td>
         </tr>
     </table>
-    <button>Click</button>
+    <button>Click</button> -->
+
+    <!-- #334 -->
+
+    <!-- #1 -->
+
+    <!-- <table id="table">
+        <tr>
+            <td>4</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>2</td>
+        </tr>
+    </table>
+    <button>Click</button> -->
+
+    <!-- #335 -->
+
+    <!-- #1 -->
+
+    <!-- <ul id="parent">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
+    
+    <input type="submit" id="button"> -->
+
+    <!-- #336 -->
+
+    <!-- #1 -->
+
+    <!-- <div>АБАБУБАБУАБУАБ</div>
+    <a href="">CLick</a> -->
+
+    <!-- #337 -->
+
+    <!-- #1 -->
+
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
