--- a/index.html
+++ b/index.html
@@ -1083,11 +1083,19 @@
 
     <!-- #1 -->
 
-    <ul>
+    <!-- <ul>
         <li>1</li>
         <li>2</li>
         <li>3</li>
-    </ul>
+    </ul> -->
+
+    <!-- #2 -->
+
+    <table>
+        <tr>1</tr>
+        <tr>2</tr>
+        <tr>3</tr>
+    </table>
 
     <!-- <script src="Введение в DOM.js"></script> -->
     <!-- <script src="Forms.js"></script> -->
